--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@vimeo/player": "^2.18.0",
+    "angular-auth-oidc-client": "^13.1.0",
+    "cookieconsent": "^3.1.1",
+    "ngx-cookieconsent": "^4.0.1",
+    "ngx-countdown": "^13.0.0",
+    "oidc-client": "^1.11.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -28,6 +34,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/vimeo__player": "^2.16.3",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
