--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/router": "^14.2.10",
     "@vimeo/player": "^2.18.0",
     "angular-auth-oidc-client": "^13.1.0",
+    "apexcharts": "^3.36.3",
     "cookieconsent": "^3.1.1",
+    "moment": "^2.29.4",
+    "ng-apexcharts": "^1.7.4",
     "ngx-cookieconsent": "^4.0.1",
     "ngx-countdown": "^13.0.0",
     "oidc-client": "^1.11.5",
